.provarCaches/00D5h000009Q6XQEA0/objects/provar__Sprint__c.object
<CustomObject>
    <fields>
        <fullName>provar__Complete_Date__c</fullName>
        <label>Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>provar__Done_Issues__c</fullName>
        <label>Done</label>
        <summaryFilterItems>
            <field>provar__Sprint_Issue__c.provar__Status_Is_Done__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>provar__Sprint_Issue__c.provar__Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>provar__In_Progress_Issues__c</fullName>
        <label>In Progress</label>
        <summaryFilterItems>
            <field>provar__Sprint_Issue__c.provar__Status_Is_In_Progress__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>provar__Sprint_Issue__c.provar__Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Not_Started_Issues__c</fullName>
        <label>Not Started</label>
        <summaryFilterItems>
            <field>provar__Sprint_Issue__c.provar__Status_Is_Not_Started__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>provar__Sprint_Issue__c.provar__Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Number_of_Issues__c</fullName>
        <label>Number of Issues</label>
        <summaryForeignKey>provar__Sprint_Issue__c.provar__Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Progress__c</fullName>
        <formula>provar__Done_Issues__c  /  provar__Number_of_Issues__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>provar__Project__c</fullName>
        <label>Project</label>
        <referenceTo>provar__Project__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>Sprints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Sprint_Goal__c</fullName>
        <label>Sprint Goal</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>provar__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Future</fullName>
                    <default>true</default>
                    <label>Future</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sprint</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__Progress__c</columns>
        <columns>provar__Start_Date__c</columns>
        <columns>provar__End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>provar__Move_Active_to_Closed_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(provar__Status__c),
ISPICKVAL(PRIORVALUE(provar__Status__c), &quot;Active&quot;),
NOT(ISPICKVAL(provar__Status__c, &quot;Closed&quot;))
)</errorConditionFormula>
        <errorMessage>Active status can only move to Closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>provar__Move_Future_to_Active_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(provar__Status__c),
ISPICKVAL(PRIORVALUE(provar__Status__c), &quot;Future&quot;),
NOT(ISPICKVAL(provar__Status__c, &quot;Active&quot;))
)</errorConditionFormula>
        <errorMessage>Future status can only move to Active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>provar__Start_and_End_Date_Are_Required</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL( provar__Status__c , &apos;Active&apos;) ||  ISPICKVAL( provar__Status__c , &apos;Closed&apos;)) &amp;&amp; (ISNULL( provar__Start_Date__c ) || ISNULL( provar__End_Date__c ))</errorConditionFormula>
        <errorMessage>To set the sprint as Active or Closed, please fill in the Start and End dates.</errorMessage>
    </validationRules>
</CustomObject>